platformctl/internal/minikube/spec/jaeger/spec.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: observability
  labels:
    app: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/opentelemetry-all-in-one
          command:
            - /go/bin/opentelemetry-all-in-one-linux
          args:
            - "--query.base-path"
            - "/jaeger-ui/"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6831
              protocol: UDP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 14268
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: observability
spec:
  selector:
    app: jaeger
  ports:
    - port: 6831
      name: "6831"
    - port: 16686
      name: "16686"
    - port: 14268
      name: "14268"
---
# https://github.com/jaegertracing/jaeger-kubernetes/issues/81
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /jaeger-ui/
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
